--- a/app/src/main/res/drawable/custom_edittext.xml
+++ b/app/src/main/res/drawable/custom_edittext.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:visible="false"
+    android:shape="rectangle">
+    <solid android:color="@color/white_smoke"/>
+    <stroke
+        android:width="0dp"
+        android:color="@color/slate_blue"/>
+    <corners
+        android:radius="100dp"/>
+</shape>
