--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +8,33 @@
     android:id="@+id/drawer_layout"
     tools:context=".MainActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/img_1">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="216dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="274dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="241dp"
+            android:fontFamily="sans-serif"
+            android:text="There is no power for change greater than a community discovering what it care about"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:textStyle="italic" />
+
+        <!-- Rest of your content -->
+
+    </RelativeLayout>
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,5 +43,6 @@
         android:id="@+id/nav_view"
         android:layout_gravity="start"
         />
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
